2008-02-05  Juanma Barranquero  <lekktu@gmail.com>

	* mh-e.el (mh-scan-format-file-check, mh-adaptive-cmd-note-flag-check):
	* mh-xface.el (mh-x-image-url-cache-canonicalize):
	Replace `legal' with `valid'.

2007-08-08  Glenn Morris  <rgm@gnu.org>

	* mh-folder.el, mh-letter.el, mh-show.el: Replace `iff' in
	doc-strings and comments.

2007-07-25  Glenn Morris  <rgm@gnu.org>

	* Relicense all FSF files to GPLv3 or later.

2007-06-06  Juanma Barranquero  <lekktu@gmail.com>

	* mh-mime.el (mh-mh-directive-present-p):
	* mh-search.el (mh-index-group-by-folder): Fix typos in docstrings.

2006-11-14  Bill Wohler  <wohler@newt.com>

	* mh-xface.el (mh-x-image-url-cache-canonicalize): Add `*' to
	reserved Windows filename characters (closes SF #1396499).

2006-11-13  Bill Wohler  <wohler@newt.com>

	Release MH-E version 8.0.3.

	* mh-e.el (Version, mh-version): Update for release 8.0.3.

	* mh-e.el (mh-alias-local-users): Boolean docstrings should start
	with "Non-nil means".  Perhaps this option should have a -flag
	appended.
	(mh-junk-background): Sync docstring with manual.

	* mh-junk.el (mh-spamassassin-blacklist, mh-bogofilter-blacklist)
	(mh-spamprobe-blacklist): Sync docstring with manual.

2006-11-11  Stephen Gildea  <gildea@stop.mail-abuse.org>

	* mh-junk.el (mh-spamassassin-blacklist, mh-spamassassin-whitelist):
	Use mh-junk-background consistently in call-process calls.
	(mh-bogofilter-blacklist, mh-bogofilter-whitelist)
	(mh-spamprobe-blacklist, mh-spamprobe-whitelist):
	Use with-current-buffer so the right thing happens if
	mh-junk-background is t (closes SF #1594802).

	* mh-e.el (mh-junk-background): Document that On value is 0;
	t may be used for debugging.

2006-11-10  Andreas Schwab  <schwab@suse.de>

	* mh-e.el (mh-draft-folder): Avoid starting sentence with "nil".

2006-11-10  Glenn Morris  <rgm@gnu.org>

	* mh-e.el (mh-draft-folder): Doc fix (Nil -> nil).

2006-09-25  Stephen Gildea  <gildea@stop.mail-abuse.org>
